Se creo el fragment login y su diseño

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">ProyectoFinal_Myfit</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="login">Login</string>
+    <string name="user">User</string>
+    <string name="psw">Password</string>
+    <string name="login_button">Join</string>
 
 </resources>
