Se creo el login y se verifico su funcionamiento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,15 @@
 <resources>
-    <string name="app_name">ProyectoFinal_Myfit</string>
+    <string name="app_name">MyFit</string>
     <!-- TODO: Remove or change this placeholder text -->
+
+    <!--Login-->
     <string name="login">Login</string>
     <string name="user">User</string>
     <string name="psw">Password</string>
     <string name="login_button">Join</string>
+
+    <!--Menu-->
+    <string name="title">MyFit</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
