--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,12 @@
     <string name="user">User</string>
     <string name="psw">Password</string>
     <string name="login_button">Join</string>
+    <string name="button_list">Foods and nutritional information</string>
 
     <!--Menu-->
     <string name="title">MyFit</string>
     <string name="action_settings">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
